--- a/lab2/PT_Part1_MNIST.ipynb
+++ b/lab2/PT_Part1_MNIST.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "RsGqx_ai_N8F"
       },
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "-50-e81epdgp"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "2U3cKYH1phFL"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "GSR_PAqjbzyZ"
       },
@@ -134,8 +134,8 @@
         "\n",
         "# Check that we are using a GPU, if not switch runtimes\n",
         "#   using Runtime > Change Runtime Type > GPU\n",
-        "assert torch.cuda.is_available(), \"Please enable GPU from runtime settings\"\n",
-        "assert COMET_API_KEY != \"\", \"Please insert your Comet API Key\"\n",
+        "# assert torch.cuda.is_available(), \"Please enable GPU from runtime settings\"\n",
+        "assert COMET_API_KEY != \"rBKgMuuH0T5P7HKh0o7hsJTki\", \"Please insert your Comet API Key\"\n",
         "\n",
         "# Set GPU for computation\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
@@ -143,15 +143,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "wGPDtVxvTtPk"
+        "id": "wGPDtVxvTtPk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b94b0591-9cdf-40a1-d741-df065bb4c40f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m comet_ml.init() is deprecated and will be removed soon. Please use comet_ml.login()\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Please paste your Comet API key from https://www.comet.com/api/my/settings/\n",
+            "(api key may not show as you type)\n",
+            "Comet API key: ··········\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Valid Comet API Key saved in /root/.comet.config (set COMET_CONFIG to change where it is saved).\n",
+            "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m To get all data logged automatically, import comet_ml before the following modules: keras, torch, sklearn, tensorflow.\n",
+            "\u001b[1;38;5;214mCOMET WARNING:\u001b[0m As you are running in a Jupyter environment, you will need to call `experiment.end()` when finished to ensure all metrics and code are logged before exiting.\n",
+            "\u001b[1;38;5;39mCOMET INFO:\u001b[0m Experiment is live on comet.com https://www.comet.com/ambreen-abdul-raheem/6s191-lab2-part1-nn/868f938eb1ab4c81b20a89a523c5fe4c\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# start a first comet experiment for the first part of the lab\n",
         "comet_ml.init(project_name=\"6S191_lab2_part1_NN\")\n",
         "comet_model_1 = comet_ml.Experiment()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "torch.cuda.is_available()"
+      ],
+      "metadata": {
+        "id": "eYmd6T1yuRvW",
+        "outputId": "4dc71d5d-bd4e-4273-8cd4-12e2a25369e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
       ]
     },
     {
@@ -167,18 +226,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "G1Bryi5ssUNX"
-      },
-      "outputs": [],
       "source": [
         "# Download and transform the MNIST dataset\n",
         "transform = transforms.Compose([\n",
         "    # Convert images to PyTorch tensors which also scales data from [0,255] to [0,1]\n",
         "    transforms.ToTensor()\n",
-        "])\n",
-        "\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "oY2f8u0-uc8Q"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "G1Bryi5ssUNX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7902f15b-84fd-443e-c8e6-982068a3a5e2"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 50.4MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 1.73MB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 12.1MB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 4.16MB/s]\n"
+          ]
+        }
+      ],
+      "source": [
         "# Download training and test datasets\n",
         "train_dataset = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
         "test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)"
@@ -1002,14 +1085,12 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
         "Xmf_JRJa_N8C"
       ],
       "name": "PT_Part1_MNIST.ipynb",
       "provenance": [],
-      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
